# js-suboptimizer

./: Cargo.toml  README.md  simple.html
src/: error.rs  html.rs  javascript.rs  main.rs  manifest.rs  prelude.rs
