[package]
name = "js-suboptimizer"
authors = ["Scott Weaver <scott.t.weaver@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
clap = { version = "4.5.28", features = ["derive"] }
html5ever = "0.29.1"
markup5ever = "0.14.1"
markup5ever_rcdom = "0.5.0-unofficial"

oxc_parser = "0.48.2"
oxc_ast = "0.48.2"
oxc_syntax = "0.48.2"
oxc_allocator = "0.48.2"
oxc_span = "0.48.2"
oxc_minifier = "0.48.2"